wire_bridge/build/log/idf_py_stderr_output_56451
Command: make -j 6 all
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c: In function 'display_init':
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:89:10: error: 'esp_lcd_panel_dev_config_t' has no member named 'color_space'
   89 |         .color_space = ESP_LCD_COLOR_SPACE_RGB, // jei spalvos bus “ne tos” -> keisk į ESP_LCD_COLOR_SPACE_BGR
      |          ^~~~~~~~~~~
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:89:24: error: 'ESP_LCD_COLOR_SPACE_RGB' undeclared (first use in this function)
   89 |         .color_space = ESP_LCD_COLOR_SPACE_RGB, // jei spalvos bus “ne tos” -> keisk į ESP_LCD_COLOR_SPACE_BGR
      |                        ^~~~~~~~~~~~~~~~~~~~~~~
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:89:24: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/display_status.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
